# IA_ElliotRendonLeon

./: .gitignore  README.md  escaladorJuego.pkl  modeloJuego.pkl  modelo_movimiento.h5  modelo_salto.h5  structure_config.json
Proyecto1/: aEstrella.py  aEstrellaDoc.md
Proyecto1(aEstrella)/: aEstrellaDoc.md  pyproject.toml
Proyecto2/: game.py
Proyecto2(pyGame Phaser)/: docPhaserRedN.md  game.py
Proyecto2(pyGame Phaser)/models/: __init__.py  decisionTree.py  knn.py  modeloInterface.py  redNeuronal.py  regresion.py
Proyecto2(pyGame Phaser)/models/modelosGuardados/: nn_model.h5
Proyecto2_v2(Phaser_Modelos)/: decisionTree.py  docPhaserModelos.md  game.py  knn.py  redNeuronal.py
Proyecto2_v2(Phaser_Modelos)/modelosGuardados/: nn_modelo_movimiento.h5  nn_modelo_salto.h5
Proyecto3(LLM)/: PyR.txt  docAbortoEutanasiaLLM.md
actividad1/: feedfoward.py  mlpJoblib.py
actividad2_Phaser/: demo1.js  grafica.xlsx
actividad3_ModeladoRed/: Actividad Red Neuronal 1.md
actividad4_Haarcascade/: haarcasXML.py  haarcascade.py  pruebasCamaraXML.py
actividad4_Haarcascade/xml/: caras_set.xml
actividad5_mediapipe/: evaluacionMediaPipe.md  mediaPipePoints.py
actividad5_mediapipe/ReconocimientoFacial/: analisisReconocimiento.md  pruebaEmociones.py  reconocimiento.py
actividad6_decisionTreePhaser/: decisionTree.py  phaser1.csv  phaser2.csv  phaser3.csv  transData.py
actividad6_decisionTreePhaser/treesOutput/: dataset1.gv  dataset2.gv  dataset3.gv
actividad_OpenCV/: act.py  act2.py
